add main project A doctor's Diary
and correct sidebar scrollbar

--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
             <p>Web Developer</p>
         </div>
 
+
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#contact">Education</a>
             <a href="#about">About</a>
-            <a href="#services">Services</a>
+            <a href="#Main-Project">Main Project</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#portfolioo">JavaScript Portfolio</a>
+            <a href="#services">Services</a>
             <a href="#contacttt">Contact</a>
 
         </nav>
@@ -167,6 +169,45 @@ High School
 
     </section>
     <!-- about section ends -->
+
+
+
+
+
+
+<!-- portfolio section starts  -->
+<section class="portfolio main-project" id="Main-Project">
+
+    <h1 class="heading"> My <span> Main Project</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>A Doctor's Diary</h3>
+            <a href="https://github.com/MSPrince/Online-Health-Consulting"> <img src="https://c4.wallpaperflare.com/wallpaper/220/107/711/scarlett-johansson-women-actress-wallpaper-preview.jpg"
+                    alt=""></a>
+        </div>
+
+
+
+    </div>
+
+</section>
+<!-- portfolio section ends -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
