--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@ High School
 
         <div class="box">
             <h3>A Doctor's Diary</h3>
-            <a href="https://github.com/MSPrince/Online-Health-Consulting"> <img src="https://c4.wallpaperflare.com/wallpaper/220/107/711/scarlett-johansson-women-actress-wallpaper-preview.jpg"
+            <a href="https://github.com/MSPrince/Online-Health-Consulting"> 
+                <img src="./Images/Screenshot 2023-10-09 230042.png"
                     alt=""></a>
         </div>
 
