--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div id="theme-toggler" class="fas fa-moon"></div>
 
 
+
     <!-- home section starts  -->
     <section class="home" id="home">
 
@@ -79,6 +80,8 @@
 
     </section>
     <!-- home section ends -->
+
+
 
     <!-- Education section starts -->
     <section class="contact contactt" id="contact">
@@ -171,44 +174,25 @@ High School
     <!-- about section ends -->
 
 
+    <!-- portfolio section starts  -->
+    <section class="portfolio main-project" id="Main-Project">
+
+        <h1 class="heading"> My <span> Main Project</span> </h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <a href="https://a-doctors-diary.netlify.app/"><h3>A Doctor's Diary</h3></a>
+                <a href="https://github.com/MSPrince/Online-Health-Consulting">
+                    <img src="./Images/Screenshot 2023-10-09 230042.png" alt=""></a>
+            </div>
 
 
 
-
-<!-- portfolio section starts  -->
-<section class="portfolio main-project" id="Main-Project">
-
-    <h1 class="heading"> My <span> Main Project</span> </h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <h3>A Doctor's Diary</h3>
-            <a href="https://github.com/MSPrince/Online-Health-Consulting"> 
-                <img src="./Images/Screenshot 2023-10-09 230042.png"
-                    alt=""></a>
         </div>
 
-
-
-    </div>
-
-</section>
-<!-- portfolio section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </section>
+    <!-- portfolio section ends -->
 
 
 
@@ -263,10 +247,10 @@ High School
                     <img src="./images/thumbnil/PuzzleGame.png" alt=""></a>
 
             </div>
-            <div class="box">
+            <!-- <div class="box">
                 <h3>Puzzle Game</h3>
                 <a href="">
-                
+
                     <img src="./images/thumbnil/TribuatePage.png" alt="">
                 </a>
 
@@ -281,12 +265,14 @@ High School
                 <h3>project 06</h3>
                 <a href="">
                     <img src="./images/thumbnil/TribuatePage.png" alt=""></a>
-            </div>
+            </div> -->
 
         </div>
 
     </section>
     <!-- portfolio section ends -->
+
+
 
 
     <!-- javascript portfolio section starts  -->
@@ -362,6 +348,8 @@ High School
     </section>
     <!-- javascript portfolio section ends -->
 
+
+
     <!-- services section starts  -->
     <section class="services" id="services">
 
@@ -403,6 +391,8 @@ High School
 
     </section>
     <!-- services section ends -->
+
+
 
     <!-- contact section starts -->
     <section class="contact" id="contacttt">
